infra/k8s-dev/geetogether-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: geetogether.dev
      http:
        paths:
          - path: /api/profiles/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-profiles-srv
                port:
                  number: 3000
          - path: /api/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-posts-srv
                port:
                  number: 3000
          - path: /api/pictures/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-pictures-srv
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-auth-srv
                port:
                  number: 3000
          - path: /api/follows/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-follows-srv
                port:
                  number: 3000
          - path: /api/forum/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-forum-srv
                port:
                  number: 3000
          - path: /api/timelines/?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-timelines-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: geetogether-client-srv
                port:
                  number: 3000
